styles.css
* {
  box-sizing: border-box;
}

body {
  font-size: 62.5%;
  margin: 0;
  font-family: Verdana, Geneva, Tahoma, sans-serif;
}

html {
  scroll-behavior: smooth;
}

/*page break */

.page-break {
  margin: 45px auto;
  width: 40%;
  border-top: 2px solid #c4c4c4;
}


/* landing panel */

/*.landing-panel-overlay {*/
/*  !*background-color: rgba(0, 0, 0, 0.33);*!*/
/*  position: relative;*/
/*  height: 100%;*/
/*  z-index: 100;*/
/*  animation: fadein 3s;*/
/*}*/


@keyframes fadein {
  from { opacity: 0; }
  to   { opacity: 1; }
}

.landing-panel {
  background-image: linear-gradient(#ffffff, #c9c8c8);
  background-size: cover;
  background-position: center center;
  background-repeat:no-repeat;
  height: 280px;
  border-bottom: 1px solid grey;
  margin-bottom: 50px;
  position: relative;
  z-index: 1;
}


.landing-panel .container {
  text-align: center;
  margin: 0 auto;
  padding-top: 30px;
  padding-bottom: 300px;
  position: relative;
}

.landing-panel nav {
  display: flex;
  justify-content: center;
  padding-bottom: 50px;
}

.landing-panel nav a {
  text-decoration: none;
  color: #000000;
  font-size: 1rem;
  margin: 0 50px 0 50px;
  padding: 10px;
  border: 2px solid transparent;
}

.landing-panel nav a:hover {
  border: 2px solid #000000;
}

.landing-panel h1 {
  margin: 0;
  padding-bottom: 15px;
  font-size: 3rem;
  color: #1d1d1d;
  text-shadow: 3px 3px rgba(155, 154, 153, 0.98);
  font-weight: lighter;
}


.landing-panel h2 {
  margin: 0;
  font-size: 2rem;
  color: #1d1d1d;
  text-shadow: 2px 2px rgba(155, 154, 153, 0.98);
  font-weight: lighter;
}

.landing-panel .profile-picture {
  position: absolute;
  top: 50%;
  left: 0;
  transform: translateY(-50%);
  animation-name: moveIn;
  animation-duration: 2s;
  animation-fill-mode: forwards;
}


@keyframes moveIn {
  from {left: -300px; opacity: 0}
  to   {left: 15%; opacity: 1}
}

.landing-panel img {
  margin-top: 15px;
  border-radius: 10px;
  border: 2px solid black;
  width: 170px;
  height: auto;
  opacity: 0.7;
}


@media (max-width: 650px) {
  .landing-panel {
    text-align: center;
  }

  .landing-panel h1 {
    font-size: 3rem;
  }

  .landing-panel h2 {
    font-size: 2.2rem;
  }

    .landing-panel nav a {
      font-size: 0.9rem;
  }

  .landing-panel nav {
    padding-bottom: 10px;
  }


  nav .links {
    margin-bottom: 20px;
  }

  .landing-panel nav a {
    margin: 0 5px;

  }
}

/* project panel */

.project-panel .container {
  margin: 0 auto;
  width: 85%;
}

.project-layout {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
}

.project-item {
  width: 45%;
  padding: 0 30px 25px 30px;
  position: relative;
  overflow: hidden;
}

.project-panel h6 {
  text-align: center;
  font-size: 1.2rem;
  margin: 16px 0px 7px 0px;
}

.project-panel .languages {
  margin: 0 auto;
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
  width: 70%;
}

.project-panel .language {
  margin: 4px 4px;
  color: white;
  font-weight: bold;
  background-color: #629197;
  border-radius: 5px;
  border: 1px solid rgba(108, 108, 108, 0.99);
  box-shadow: 4px 5px #cfcfcf;
}

.project-panel .language p {
  vertical-align: middle;
  line-height: 15px;
  padding: 5px;
}

.project-panel .heading {
  text-align: center;
  font-size: 1.3rem;
  font-weight: lighter;
}

.project-panel img {
  width: 100%;
}

.project-panel p {
  font-size: 0.9rem;
  margin-top: 0;
  margin-bottom: 5px;
  line-height: 1.5;
}

.project-panel .description {
  width: 100%;
  padding: 15px 10px 0 10px;
}

.hover-container {
    position: relative;
}

.project-item .hover-container .hover-panel {
    position: absolute;
    top: 0;
    left: 0;
    background-color: rgba(0, 0, 0, 0.7);
    height: 100%;
    width: 100%;
    flex-direction: column;
    z-index: 200;
    display: none;
}

.hover-panel .hover-links {
  margin: 0 auto;
  text-align: center;
  position: absolute;
  width: 100%;
  top: 50%;
  transform: translateY(-50%)
}

.hover-panel .hover-links a {
    text-decoration: none;
    color: #ffffff;
    font-size: 2.5rem;
    padding: 10px 20px;
}

.hover-panel .hover-links a:hover {
    color: #ffff00;
}


.project-item::before {
  position: absolute;
  width: 12%;
  padding-left: 20px;
  padding-top: 10px;
}

.project-item img {
  width: 100%;
  height: auto;
}



#proj1-item:before {
  content: url("media/number_icons/one.svg");
    z-index: 100;
}

#proj2-item:before {
  content: url("media/number_icons/two.svg");
  z-index: 101;
}

#proj3-item:before {
  content: url("media/number_icons/three.svg");
  z-index: 102;
}

#proj4-item:before {
  content: url("media/number_icons/four.svg");
  z-index: 103;
}

#proj5-item:before {
  content: url("media/number_icons/five.svg");
  z-index: 104;
}

#proj6-item:before {
  content: url("media/number_icons/six.svg");
  z-index: 105;
}

#proj3-item img {
    border: 1px solid black;
}

#proj5-item img {
  border: 1px solid black;
}

@media (max-width: 1200px) {
  .project-panel .container {
    width: 90%;
  }

}


@media (max-width: 750px) {
  .project-layout {
    display: block;
  }

  .project-item {
    width: 100%;
  }


}

/* about me */

.about-me .container {
  margin: 30px auto 0 auto;
  width: 70%;
}

.about-me h3 {
  font-size: 1.3rem;
  text-align: center;
}

.about-me p {
  font-size: 1rem;
  width: 80%;
  margin: 0 auto;
  line-height: 1.5;
}

@media (max-width: 1080px) {
  .about-me .container {
    width: 100%;
  }
}
/* hire me */

.hire-me .container {
  margin: 0 auto;
  width: 80%;
}

.hire-me h3 {
  font-size: 1.3rem;
  text-align: center;
}

.hire-me-layout {
  margin-top: 50px;
  display: flex;
  justify-content: center;
}

.hire-item {
  width: 25%;
  display: flex;
  flex-direction: column;
}

.hire-item img {
  width: auto;
  height: 65px;
  margin: 0 auto;
  display: block;
}

.hire-item a {
  text-decoration: none;
}

.hire-item p {
  text-align: center;
  font-size: 1rem;
  color: #000000;
  overflow-wrap: break-word;
  width: 80%;
  margin: 25px auto;
}

.hire-item:after {
  content: "";
  display: block;
  margin: 0 auto;
  width: 40%;
  padding-top: 10px;
  border-bottom: 2px solid #ffffff;
}


.hire-item:hover:after {
  border-bottom: 2px solid #c4c4c4;
}


@media (max-width: 1080px) {
  .hire-item p {
    font-size: 0.8rem;
  }

  .hire-item {
    margin-bottom: 20px;
  }

}

@media (max-width: 870px) {

  .hire-me-layout {
    margin: 0 auto;
    flex-wrap: wrap;
  }

  .hire-item {
    width: 45%;
  }


  .hire-item a {
    display: flex;
    flex-direction: column;
  }

  .hire-item p {
    font-size: 1.2rem;
  }


}


@media (max-width: 580px) {
    .hire-item p {
        font-size: 0.6rem;
        margin: 10px auto;
    }

}


/* skills */

.skills-panel .container {
  margin: 30px auto 0 auto;
  width: 70%;
}

.skills-panel h3 {
  text-align: center;
  font-size: 1.3rem;
}

.skills-layout {
  display: flex;
  justify-content: center;
  width: 80%;
  flex-wrap: wrap;
  margin: 0 auto;
}

.skills-item {
  padding: 0 20px 50px 20px;
}

.skills-item img {
  height: 70px;
  width: auto;
}

@media (max-width: 850px) {
  .skills-panel .container {
    width: 100%;
  }
}

/* footer */

footer {
  background-color: #b4b4b4;
  border-top: 1px solid #666666;
}

footer .container {
  height: 60px;
  width: 70%;
  margin: 0 auto;
}

footer p {
  padding-top: 30px;
}

@media (max-width: 610px) {
  footer p {
    padding-top: 30px;
  }
}

